--- a/index.HTML
+++ b/index.HTML
@@ -6,9 +6,25 @@
     <title>introduccion <html></html></title>
 </head>
 <body>
- <hl>primer documento HTML</hl>   
- <p>
-Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, aspernatur dolores! Odit id sapiente consequatur consectetur, exercitationem laboriosam cumque tempora!
- </p>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="/">Home</a>
+                </li>
+                <li>
+                    <a href="simple.hrml">Web Simple</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <hl>primer documento HTML</hl>   
+    <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, aspernatur dolores! Odit id sapiente consequatur consectetur, exercitationem laboriosam cumque tempora!
+    </p>
+    <h2>Esto es un h2</h2>
+    <p>Lorem impsum dolor sit.</p>
+    <p>hola</p>
+    <h3>titulo 3</h3>
 </body>
 </html>
